--- a/projects/hello_cargo/Cargo.toml
+++ b/projects/hello_cargo/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "rust_practice"
+name = "hello_cargo"
 version = "0.1.0"
-authors = ["ChristopherEeles <christopher.eeles@outlook.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
